apiに必要そうなのをGeminiにしてもらったので、一旦反映